--- a/package.json
+++ b/package.json
@@ -2,18 +2,50 @@
   "name": "uzumejs",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "run-p build:common build:esm",
+    "build:common": "tsc",
+    "build:esm": "tsc -p tsconfig.esm.json",
     "build:docker": "docker build -t uzumejs_wasm docker",
     "start:docker": "docker run -dit --net=host -v $PWD/wasm:/uzuem_src --name uzumejs_wasm uzumejs_wasm bash",
     "stop:docker": "docker rm -f uzumejs_wasm",
-    "build:wasm": "docker exec -w /uzuem_src uzumejs_wasm ./build.sh bash && cp ./wasm/build/uzumejs.wasm ./pkg && cp ./wasm/build/uzumejs.js ./pkg && cp ./wasm/build/uzumejs.d.ts ./pkg"
+    "build:wasm": "docker exec -w /uzuem_src uzumejs_wasm ./build.sh bash && cp ./wasm/build/uzumejs.wasm ./pkg && cp ./wasm/build/uzumejs.js ./pkg && cp ./wasm/build/uzumejs.d.ts ./pkg",
+    "lint": "run-s lint:*",
+    "lint:eslint": "eslint . --ext .ts,.tsx --fix",
+    "lint:prettier": "prettier --write .",
+    "prepare": "simple-git-hooks",
+    "test": "jest"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npm test && npm run lint"
   },
   "keywords": [],
   "author": "Hal@shurabaP",
   "license": "MIT",
   "devDependencies": {
+    "@jest/types": "^28.1.0",
+    "@types/jest": "^28.1.1",
     "@types/node": "^17.0.39",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "jest": "^28.1.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
+    "simple-git-hooks": "^2.8.0",
+    "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
