--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,13 @@
   "compilerOptions": {
     "target": "ES2019",
     "module": "commonjs",
-   "sourceMap": true,
-   "outDir": "./dist",
+    "sourceMap": true,
+    "types": ["node", "jest"],
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
- },
- "include": [
-   "src/**/*"
- ],
+  },
+  "include": ["src/**/*"]
 }
