--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "uzumejs",
   "version": "0.1.0",
   "description": "",
-  "main": "dist/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -21,9 +20,6 @@
     "docker:stop": "docker rm -f uzumejs_wasm",
     "test": "jest"
   },
-  "simple-git-hooks": {
-    "pre-commit": "npm test && npm run lint"
-  },
   "keywords": [],
   "author": "Hal@shurabaP",
   "license": "MIT",
@@ -35,7 +31,6 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.4",
-    "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
 }
