--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "resources"
   ],
   "engines": {
     "node": ">=14"
   },
   "scripts": {
-    "prebuild": "rimraf dist && mkdir dist",
-    "build": "run-s build:wasm build:common",
-    "build:common": "tsc",
-    "build:wasm": "docker exec -w /uzuem_src uzumejs_wasm ./build.sh bash && cp ./wasm/build/uzumewasm.wasm ./dist && cp ./wasm/build/uzumewasm.js ./dist/index.js && cp ./wasm/build/uzumewasm.d.ts ./dist/index.d.ts",
+    "prebuild": "rimraf dist && rimraf resources && mkdir resources",
+    "build": "run-s build:wasm build:webpack",
+    "build:wasm": "docker exec -w /uzuem_src uzumejs_wasm ./build.sh bash && cp ./wasm/build/uzumewasm.wasm ./resources && cp ./wasm/build/uzumewasm.js ./resources && cp ./wasm/build/uzumewasm.d.ts ./resources",
     "docker:build": "docker build -t uzumejs_wasm docker",
     "docker:start": "docker run -dit --net=host -v $PWD/wasm:/uzuem_src --name uzumejs_wasm uzumejs_wasm bash",
     "docker:stop": "docker rm -f uzumejs_wasm",
+    "build:webpack": "npx webpack --config webpack.config.js --stats-children",
     "test": "jest"
   },
   "keywords": [],
@@ -27,10 +28,15 @@
     "@jest/types": "^28.1.0",
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.39",
+    "buffer": "^6.0.3",
     "jest": "^28.1.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.4",
-    "typescript": "^4.7.3"
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.2"
   }
 }
