--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,11 @@
     "sourceMap": true,
     "types": ["node", "jest"],
     "outDir": "./dist",
+    "declaration": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": ["src/**/*"],
 }
