Add Bindings to import and export waveform

--- a/wasm/CMakeLists.txt
+++ b/wasm/CMakeLists.txt
@@ -33,11 +33,11 @@ if (EMSCRIPTEN)
 -O3 \
 -s STRICT=1 \
 -s MALLOC=emmalloc \
--s EXPORT_ES6=1 \
 -s WASM=1 \
 -s ALLOW_MEMORY_GROWTH=1 \
 -s MODULARIZE=1 \
 -s FILESYSTEM=0 \
+-s ENVIRONMENT=web,node \
 -s 'EXPORT_NAME=\"factory\"' \
 ")
     set_target_properties(uzumewasm PROPERTIES LINK_FLAGS ${emcc_flags})
