--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uzumejs",
   "version": "0.1.0",
   "description": "",
-  "module": "dist/index.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
@@ -13,12 +13,12 @@
   },
   "scripts": {
     "prebuild": "rimraf dist && rimraf resources && mkdir resources",
-    "build": "run-s build:wasm build:webpack",
+    "build": "run-s build:wasm build:common",
+    "build:common": "tsc",
     "build:wasm": "docker exec -w /uzuem_src uzumejs_wasm ./build.sh bash && cp ./wasm/build/uzumewasm.wasm ./resources && cp ./wasm/build/uzumewasm.js ./resources && cp ./wasm/build/uzumewasm.d.ts ./resources",
     "docker:build": "docker build -t uzumejs_wasm docker",
     "docker:start": "docker run -dit --net=host -v $PWD/wasm:/uzuem_src --name uzumejs_wasm uzumejs_wasm bash",
     "docker:stop": "docker rm -f uzumejs_wasm",
-    "build:webpack": "npx webpack --config webpack.config.js --stats-children",
     "test": "jest"
   },
   "keywords": [],
@@ -34,9 +34,6 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.4",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.7.3",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.2"
+    "typescript": "^4.7.3"
   }
 }
